--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <base href="/">
     <meta charset="utf-8" />
     <link rel="icon" href="icon.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
